Fixed checkstyle PMD error